Bug#46490 : Full table scan hangs with more than 21 fragments